# serializer version: 1
# name: test_sensors[sensor.nina_affected_areas_aach_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_affected_areas_aach_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Affected areas: Aach 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Affected areas: Aach 1',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'affected_areas',
    'unique_id': '095760000000-1-affected_areas',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_affected_areas_aach_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Affected areas: Aach 1',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_affected_areas_aach_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Gemeinde Oberreichenbach, Gemeinde Neuweiler, Stadt Nagold, Stadt Neubulach, Gemeinde Schömberg, Gemeinde Simmersfeld, Gemeinde Simmozheim, Gemeinde Rohrdorf, Gemeinde Ostelsheim, Gemeinde Ebhausen, Gemeinde Egenhausen, Gemeinde Dobel, Stadt Bad Lieb...',
  })
# ---
# name: test_sensors[sensor.nina_affected_areas_aach_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_affected_areas_aach_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Affected areas: Aach 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Affected areas: Aach 2',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'affected_areas',
    'unique_id': '095760000000-2-affected_areas',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_affected_areas_aach_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Affected areas: Aach 2',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_affected_areas_aach_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_affected_areas_aach_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_affected_areas_aach_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Affected areas: Aach 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Affected areas: Aach 3',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'affected_areas',
    'unique_id': '095760000000-3-affected_areas',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_affected_areas_aach_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Affected areas: Aach 3',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_affected_areas_aach_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_affected_areas_aach_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_affected_areas_aach_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Affected areas: Aach 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Affected areas: Aach 4',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'affected_areas',
    'unique_id': '095760000000-4-affected_areas',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_affected_areas_aach_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Affected areas: Aach 4',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_affected_areas_aach_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_affected_areas_aach_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_affected_areas_aach_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Affected areas: Aach 5',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Affected areas: Aach 5',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'affected_areas',
    'unique_id': '095760000000-5-affected_areas',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_affected_areas_aach_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Affected areas: Aach 5',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_affected_areas_aach_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_headline_aach_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_headline_aach_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Headline: Aach 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Headline: Aach 1',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'headline',
    'unique_id': '095760000000-1-headline',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_headline_aach_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Headline: Aach 1',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_headline_aach_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Ausfall Notruf 112',
  })
# ---
# name: test_sensors[sensor.nina_headline_aach_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_headline_aach_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Headline: Aach 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Headline: Aach 2',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'headline',
    'unique_id': '095760000000-2-headline',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_headline_aach_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Headline: Aach 2',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_headline_aach_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_headline_aach_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_headline_aach_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Headline: Aach 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Headline: Aach 3',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'headline',
    'unique_id': '095760000000-3-headline',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_headline_aach_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Headline: Aach 3',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_headline_aach_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_headline_aach_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_headline_aach_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Headline: Aach 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Headline: Aach 4',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'headline',
    'unique_id': '095760000000-4-headline',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_headline_aach_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Headline: Aach 4',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_headline_aach_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_headline_aach_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_headline_aach_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Headline: Aach 5',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Headline: Aach 5',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'headline',
    'unique_id': '095760000000-5-headline',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_headline_aach_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Headline: Aach 5',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_headline_aach_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_more_information_url_aach_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_more_information_url_aach_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'More information URL: Aach 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'More information URL: Aach 1',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'more_info_url',
    'unique_id': '095760000000-1-more_info_url',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_more_information_url_aach_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA More information URL: Aach 1',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_more_information_url_aach_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'https://www.wettergefahren.de',
  })
# ---
# name: test_sensors[sensor.nina_more_information_url_aach_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_more_information_url_aach_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'More information URL: Aach 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'More information URL: Aach 2',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'more_info_url',
    'unique_id': '095760000000-2-more_info_url',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_more_information_url_aach_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA More information URL: Aach 2',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_more_information_url_aach_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_more_information_url_aach_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_more_information_url_aach_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'More information URL: Aach 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'More information URL: Aach 3',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'more_info_url',
    'unique_id': '095760000000-3-more_info_url',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_more_information_url_aach_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA More information URL: Aach 3',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_more_information_url_aach_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_more_information_url_aach_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_more_information_url_aach_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'More information URL: Aach 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'More information URL: Aach 4',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'more_info_url',
    'unique_id': '095760000000-4-more_info_url',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_more_information_url_aach_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA More information URL: Aach 4',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_more_information_url_aach_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_more_information_url_aach_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_more_information_url_aach_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'More information URL: Aach 5',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'More information URL: Aach 5',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'more_info_url',
    'unique_id': '095760000000-5-more_info_url',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_more_information_url_aach_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA More information URL: Aach 5',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_more_information_url_aach_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_sender_aach_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_sender_aach_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sender: Aach 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sender: Aach 1',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sender',
    'unique_id': '095760000000-1-sender',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_sender_aach_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Sender: Aach 1',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_sender_aach_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Deutscher Wetterdienst',
  })
# ---
# name: test_sensors[sensor.nina_sender_aach_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_sender_aach_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sender: Aach 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sender: Aach 2',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sender',
    'unique_id': '095760000000-2-sender',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_sender_aach_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Sender: Aach 2',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_sender_aach_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_sender_aach_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_sender_aach_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sender: Aach 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sender: Aach 3',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sender',
    'unique_id': '095760000000-3-sender',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_sender_aach_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Sender: Aach 3',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_sender_aach_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_sender_aach_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_sender_aach_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sender: Aach 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sender: Aach 4',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sender',
    'unique_id': '095760000000-4-sender',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_sender_aach_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Sender: Aach 4',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_sender_aach_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_sender_aach_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_sender_aach_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sender: Aach 5',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sender: Aach 5',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sender',
    'unique_id': '095760000000-5-sender',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_sender_aach_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NINA Sender: Aach 5',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_sender_aach_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_severity_aach_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'extreme',
        'severe',
        'moderate',
        'minor',
        'unknown',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_severity_aach_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Severity: Aach 1',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Severity: Aach 1',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'severity',
    'unique_id': '095760000000-1-severity',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_severity_aach_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'NINA Severity: Aach 1',
      'options': list([
        'extreme',
        'severe',
        'moderate',
        'minor',
        'unknown',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_severity_aach_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'minor',
  })
# ---
# name: test_sensors[sensor.nina_severity_aach_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'extreme',
        'severe',
        'moderate',
        'minor',
        'unknown',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_severity_aach_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Severity: Aach 2',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Severity: Aach 2',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'severity',
    'unique_id': '095760000000-2-severity',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_severity_aach_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'NINA Severity: Aach 2',
      'options': list([
        'extreme',
        'severe',
        'moderate',
        'minor',
        'unknown',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_severity_aach_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_severity_aach_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'extreme',
        'severe',
        'moderate',
        'minor',
        'unknown',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_severity_aach_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Severity: Aach 3',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Severity: Aach 3',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'severity',
    'unique_id': '095760000000-3-severity',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_severity_aach_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'NINA Severity: Aach 3',
      'options': list([
        'extreme',
        'severe',
        'moderate',
        'minor',
        'unknown',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_severity_aach_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_severity_aach_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'extreme',
        'severe',
        'moderate',
        'minor',
        'unknown',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_severity_aach_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Severity: Aach 4',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Severity: Aach 4',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'severity',
    'unique_id': '095760000000-4-severity',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_severity_aach_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'NINA Severity: Aach 4',
      'options': list([
        'extreme',
        'severe',
        'moderate',
        'minor',
        'unknown',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_severity_aach_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[sensor.nina_severity_aach_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'extreme',
        'severe',
        'moderate',
        'minor',
        'unknown',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nina_severity_aach_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Severity: Aach 5',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Severity: Aach 5',
    'platform': 'nina',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'severity',
    'unique_id': '095760000000-5-severity',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.nina_severity_aach_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'NINA Severity: Aach 5',
      'options': list([
        'extreme',
        'severe',
        'moderate',
        'minor',
        'unknown',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nina_severity_aach_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
